# Numerics.Native

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  sonar-project.properties
.github/workflows/: nightly.yml  rolling.yml
cmake/: Numerics_Native_Config.cmake
include/: Matrix.h  Numerics.Native.h  Position2D.h  Position3D.h  Vector2D.h  Vector3D.h  VectorBase2D.h  VectorBase3D.h  core.h
src/: Numerics.Native.cpp  core.cpp
tests/: CMakeLists.txt
tests/src/: core.cpp  test1.cpp
